structure edits to Deck Editor

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -365,6 +365,7 @@
                 <div id="cardname"></div>
                 <div id="carddata"></div>
             </div>
+        </div>
         <div id="de_column2">
             <div id="cardfilter">
                 <div id="cardfilter_c1">
