deck edit visuals

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -359,7 +359,7 @@
         </section>
     </header>
     <header style="padding-top:50px" id="deckedit">
-        <div id="de_column1"></div>
+        <div id="de_column1">
             <div id="cardpic"></div>
             <div id="cardinfo">
                 <div id="cardname"></div>
@@ -373,7 +373,7 @@
                     <select id="de_decklist"></select>
                 </div>
                 <div id="cardfilter_c2">
-                
+
                 </div>
             </div>
             <div id="de_maincolumn">
