--- a/server/http/index.html
+++ b/server/http/index.html
@@ -385,6 +385,7 @@
                     <span id="maindeckCountSpell"></span>
                     <span id="maindeckCountMonster"></span>
                 </div>
+                <div id="maindeck"></div>
                 <div id="xtradecksummary">
                     <span>Extra Deck:</span>
                     <span id="xtradeckCount"></span>
@@ -393,6 +394,7 @@
                     <span id="xtradeckCountXYZ"></span>
                     <span id="xtradeckCountFusion"></span>
                 </div>
+                <div id="xtradeck"></div>
                 <div id="sidedecksummary">
                     <span>ExtraDeck:</span>
                     <span id="sidedeckCount"></span>
@@ -401,6 +403,7 @@
                     <span id="sidedeckCountSpell"></span>
                     <span id="sidedeckCountMonster"></span>
                 </div>
+                <div id="sidedeck"></div>
             </div>
             <div id="de_searchresults">
                 <div id="resultecksummary">
