--- a/server/http/index.html
+++ b/server/http/index.html
@@ -359,57 +359,59 @@
         </section>
     </header>
     <header style="padding-top:50px" id="deckedit">
-        <div id="de_column1">
-            <div id="cardpic"></div>
-            <div id="cardinfo">
-                <div id="cardname"></div>
-                <div id="carddata"></div>
-            </div>
-        </div>
-        <div id="de_column2">
-            <div id="cardfilter">
-                <div id="cardfilter_c1">
-                    <select id="banlist"></select>
-                    <select id="de_decklist"></select>
+        <div id="deckwrapper">
+            <div id="de_column1">
+                <div id="cardpic"></div>
+                <div id="cardinfo">
+                    <div id="cardname"></div>
+                    <div id="carddata"></div>
                 </div>
-                <div id="cardfilter_c2">
+            </div>
+            <div id="de_column2">
+                <div id="cardfilter">
+                    <div id="cardfilter_c1">
+                        <select id="banlist"></select>
+                        <select id="de_decklist"></select>
+                    </div>
+                    <div id="cardfilter_c2">
 
+                    </div>
                 </div>
-            </div>
-            <div id="de_maincolumn">
-                <div id="maindecksummary">
-                    <span>Main Deck:</span>
-                    <span id="maindeckCount"></span>
-                    <span id="maindeckCount"></span>
-                    <span id="maindeckCountTrap"></span>
-                    <span id="maindeckCountSpell"></span>
-                    <span id="maindeckCountMonster"></span>
+                <div id="de_maincolumn">
+                    <div id="maindecksummary">
+                        <span>Main Deck:</span>
+                        <span id="maindeckCount"></span>
+                        <span id="maindeckCount"></span>
+                        <span id="maindeckCountTrap"></span>
+                        <span id="maindeckCountSpell"></span>
+                        <span id="maindeckCountMonster"></span>
+                    </div>
+                    <div id="maindeck"></div>
+                    <div id="xtradecksummary">
+                        <span>Extra Deck:</span>
+                        <span id="xtradeckCount"></span>
+                        <span id="xtradeckCount"></span>
+                        <span id="xtradeckCountSynchro"></span>
+                        <span id="xtradeckCountXYZ"></span>
+                        <span id="xtradeckCountFusion"></span>
+                    </div>
+                    <div id="xtradeck"></div>
+                    <div id="sidedecksummary">
+                        <span>ExtraDeck:</span>
+                        <span id="sidedeckCount"></span>
+                        <span id="sidedeckCount"></span>
+                        <span id="sidedeckCountTrap"></span>
+                        <span id="sidedeckCountSpell"></span>
+                        <span id="sidedeckCountMonster"></span>
+                    </div>
+                    <div id="sidedeck"></div>
                 </div>
-                <div id="maindeck"></div>
-                <div id="xtradecksummary">
-                    <span>Extra Deck:</span>
-                    <span id="xtradeckCount"></span>
-                    <span id="xtradeckCount"></span>
-                    <span id="xtradeckCountSynchro"></span>
-                    <span id="xtradeckCountXYZ"></span>
-                    <span id="xtradeckCountFusion"></span>
+                <div id="de_searchresults">
+                    <div id="resultecksummary">
+                        <span>Results:</span>
+                    </div>
+                    <div id="searchresult"></div>
                 </div>
-                <div id="xtradeck"></div>
-                <div id="sidedecksummary">
-                    <span>ExtraDeck:</span>
-                    <span id="sidedeckCount"></span>
-                    <span id="sidedeckCount"></span>
-                    <span id="sidedeckCountTrap"></span>
-                    <span id="sidedeckCountSpell"></span>
-                    <span id="sidedeckCountMonster"></span>
-                </div>
-                <div id="sidedeck"></div>
-            </div>
-            <div id="de_searchresults">
-                <div id="resultecksummary">
-                    <span>Results:</span>
-                </div>
-                <div id="searchresult"></div>
             </div>
         </div>
     </header>
