move translations to system

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/animation.css">
 
-    
+
 
 
     <style>
@@ -551,6 +551,7 @@
             <span itemscope itemtype="http://schema.org/Organization" itemprop="name">Konami</span>or
             <span itemscope itemtype="http://schema.org/Person" itemprop="name">Kazuki Takahashi</span>. Salvation Server &copy; 2013-2014, all rights reserved by respective parties. Powered by Yu-Jo Friendship and fans of Yu-Gi-Oh! worldwide.</div>
     </footer>
+    <script src="js/translations.js"></script>
     <script src="js/primus.js"></script>
     <script src="js/index-controls.js"></script>
     <script src="js/battlepack3.js" async></script>
