curb server traffic for a while.

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -200,7 +200,7 @@
                 <ul class="webonly" style="text-align:center; padding:0;" id="mirrors" itemscope itemtype="http://schema.org/SoftwareApplication">
                     <!--<li>Login</li>
                 <li>Sign Up</li>-->
-                    <li><a href="http://ygopro.us/setups/setup.msi" onclick="_gaq.push(['_trackEvent', 'Site', 'Download', 'Full Windows']);">Full Windows Client </a>
+                    <li><a href="https://mega.co.nz/#!q1gW2CTS!oyP2CrbrVaMEhVIvHJ878IU2FviiFtrkBqRouzkFFJw" onclick="_gaq.push(['_trackEvent', 'Site', 'Download', 'Full Windows']);">Full Windows Client </a>
 
                     </li>
                     <!--
@@ -208,6 +208,7 @@
                         
                     </li>
 -->
+<!--
                     <li><a href=" http://ygopro.us/setups/client.tar.gz" onclick="_gaq.push(['_trackEvent', 'Site', 'Download', 'Portable']);">Linux32 TarGz/ Windows Portable</a>
 
                     </li>
@@ -217,6 +218,7 @@
 
                     <li><a href="https://mega.co.nz/#!utBRyTzB!EcezmcFqFN10rO2fRT4PYpTxCHy0GkumA8YvYdrwGTM" onclick="_gaq.push(['_trackEvent', 'Site', 'Download', 'Torrent']);"> Mirror 1</a>
                     </li>
+-->
                     <li><a href="http://ygopro.us/setups/setup.msi.torrent">Torrent</a>
                     </li>
                     <!--
