--- a/server/http/index.html
+++ b/server/http/index.html
@@ -114,6 +114,11 @@
             background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, #000000), color-stop(38%, #000000), color-stop(38%, #000000), color-stop(44%, #ee44aa), color-stop(49%, #ffffff), color-stop(51%, #000000), color-stop(100%, #000000));
             -webkit-background-size: 50% 100%;
             color: rgba(255, 255, 255, 0.1);
+            -webkit-background-clip: text;
+            -webkit-animation-name: shine;
+            -webkit-animation-duration: 10s;
+            -webkit-animation-iteration-count: 10;
+            -webkit-animation-timing-function: linear;
         }
         
         .gamelistcenter {
