--- a/server/http/index.html
+++ b/server/http/index.html
@@ -172,14 +172,15 @@
     <div style="z-index:40; position:relative;">
         <span class="psudolinksingle" onclick="singlesitenav('home')" id='psudologo'>
             <h1 style="font-size:1.2em">
-            <span data-translation-salvationserver style="color:#e4a;">YGOPro</span> Salvation Server</h1>
+            <span style="color:#e4a;">YGOPro</span> <span data-translation-salvationserver>Salvation Server</span>
+        </h1>
         </span>
         <ul class="featurelist" style="font-size:small">
             <!--<li class="launcheronly"><span class="psudolinksingle " onclick='ygopro("-l")'>LAN Mode</span>
             </li>-->
             <li><span data-translation-deckedit class="psudolinksingle" onclick='ygopro("-d");singlesitenav("deckedit");'>Deck Edit</span>
             </li>
-            <li data-translation-replays class="launcheronly"><span class="psudolinksingle" onclick='ygopro("-r")'>Replays</span>
+            <li class="launcheronly"><span data-translation-replays class="psudolinksingle" onclick='ygopro("-r")'>Replays</span>
             </li class="loophole">
             <li><span data-translation-gamelist class="psudolinksingle" onclick="joinGamelist();singlesitenav('gamelist');">Game List</span>
             </li>
@@ -191,7 +192,7 @@
             </li>
             <li><span data-translation-faq class="psudolinksingle" onclick="singlesitenav('faq')">News</span>
             </li>
-            <li data-translation-settings class="launcheronly"><span class="psudolinksingle" onclick="singlesitenav('settings')">Settings</span>
+            <li class="launcheronly"><span class="psudolinksingle" onclick="singlesitenav('settings')" data-translation-settings>Settings</span>
             </li>
         </ul>
     </div>
@@ -199,7 +200,8 @@
         <div id="homecontainer">
             <span class="psudolinksingle" onclick="singlesitenav('home')">
                 <h1 style="padding-top:80px;"   class="shine">
-            <span data-translation-salvationserver style="color:#e4a;">YGOPro</span> Salvation Server</h1>
+                    <span  style="color:#e4a;">YGOPro</span> <span data-translation-salvationserver>Salvation Server</span>
+            </h1>
             </span>
             <h2 data-translation-onlineyugiohsimulator class="shine">Online Yu-Gi-Oh! Simulator</h2>
             <nav class="lander-main">
