--- a/server/http/index.html
+++ b/server/http/index.html
@@ -27,7 +27,7 @@
     <style>
         #languagesetter {
             text-align: center;
-            color: purple;
+            color: blueviolet;
             font-weight: 800;
             text-shadow: 0 0 9px mediumblue;
             padding: 15px;
@@ -256,6 +256,7 @@
                 <span onclick="translateLang('es')">Español</span>
                 <span onclick="translateLang('de')">Deutsch</span>
                 <span onclick="translateLang('fr')">Français</span>
+                <span onclick="translateLang('pt')">Português</span>
 
 
             </div>
