--- a/server/http/index.html
+++ b/server/http/index.html
@@ -211,7 +211,7 @@
                 <ul class="webonly" style="text-align:center; padding:0;" id="mirrors" itemscope itemtype="http://schema.org/SoftwareApplication">
                     <!--<li>Login</li>
                 <li>Sign Up</li>-->
-                    <li><a href="https://mega.co.nz/#!q1gW2CTS!oyP2CrbrVaMEhVIvHJ878IU2FviiFtrkBqRouzkFFJw" onclick="_gaq.push(['_trackEvent', 'Site', 'Download', 'Full Windows']);">Full Windows Client </a>
+                    <li><a data-translation-playnow href="https://mega.co.nz/#!q1gW2CTS!oyP2CrbrVaMEhVIvHJ878IU2FviiFtrkBqRouzkFFJw" onclick="_gaq.push(['_trackEvent', 'Site', 'Download', 'Full Windows']);">Full Windows Client </a>
 
                     </li>
                     <!--
@@ -240,14 +240,14 @@
 
             </nav>
             <form id="ipblogin" style="text-align:center; color: white !important; display:block; margin:0 auto" class="launcheronly loginsystem">
-                <input id="ips_username" type="text" class="launcheronly loginsystem" name="ips_username" tabindex="1" placeholder="Forum Username">
-                <input id="ips_password" type="password" class="launcheronly loginsystem" name="ips_password" tabindex="2" placeholder="Forum Password">
-                <br><span style="font-size:.7em"><input type="checkbox" id="ips_remember" > Remember Username &amp; Password?</span>
+                <input data-translation-forumusername id="ips_username" type="text" class="launcheronly loginsystem" name="ips_username" tabindex="1" placeholder="Forum Username">
+                <input data-translation-forumpassword id="ips_password" type="password" class="launcheronly loginsystem" name="ips_password" tabindex="2" placeholder="Forum Password">
+                <br><span data-translation-rememberusernamepassword style="font-size:.7em"><input type="checkbox" id="ips_remember" > Remember Username &amp; Password?</span>
                 <br />
                 <button data-translation-login id="dolog" class="launcheronly loginsystem">Login</button>
                 <br />
                 <br />
-                <a data-translation-registerviaforum class="launcheronly loginsystem" href="http://forum.ygopro.us/index.php?app=core&module=global&section=register" target="_blank">Register via Forum</a> | <a class="launcheronly loginsystem" href="http://forum.ygopro.us/index.php?app=core&module=global&section=lostpass">Forgot Password</a>
+                <a data-translation-registerviaforum class="launcheronly loginsystem" href="http://forum.ygopro.us/index.php?app=core&module=global&section=register" target="_blank">Register via Forum</a> | <a data-translation-forgotpassword class="launcheronly loginsystem" href="http://forum.ygopro.us/index.php?app=core&module=global&section=lostpass">Forgot Password</a>
             </form>
             <div style="font-size:.5em; text-align:center; color:#747" id="versioninfo">Version 4 : Production 4 : Revision 1</div>
             <div style="font-size:1.5em; text-align:center; color:pink" class='webonly'></div>
