--- a/server/http/index.html
+++ b/server/http/index.html
@@ -242,7 +242,7 @@
             <form id="ipblogin" style="text-align:center; color: white !important; display:block; margin:0 auto" class="launcheronly loginsystem">
                 <input data-translation-forumusername id="ips_username" type="text" class="launcheronly loginsystem" name="ips_username" tabindex="1" placeholder="Forum Username">
                 <input data-translation-forumpassword id="ips_password" type="password" class="launcheronly loginsystem" name="ips_password" tabindex="2" placeholder="Forum Password">
-                <br><span data-translation-rememberusernamepassword style="font-size:.7em"><input type="checkbox" id="ips_remember" > Remember Username &amp; Password?</span>
+                <br><span style="font-size:.7em"><input type="checkbox" id="ips_remember" ><span data-translation-rememberusernamepassword> Remember Username &amp; Password?</span></span>
                 <br />
                 <button data-translation-login id="dolog" class="launcheronly loginsystem">Login</button>
                 <br />
