--- a/server/http/index.html
+++ b/server/http/index.html
@@ -257,7 +257,8 @@
                 <span onclick="translateLang('de')">Deutsch</span>
                 <span onclick="translateLang('fr')">Français</span>
                 <span onclick="translateLang('pt')">Português</span>
-
+				<span onclick="translateLang('nl')">Nederlands</span>
+				
 
             </div>
             <div class="webonly" style="width:728px;margin:0 auto">
