fixed gray text issues

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -296,7 +296,7 @@
         <section id="hostSettings">
             <div>
 
-                <h2>Settings</h2>
+                <h2 data-translation-settings >Settings</h2>
                 <!--<label data-translation-ranked>Ranked</label>
                 <input type="radio" name="ranked" value="R" />Yes
                 <input type="radio" name="ranked" value="U" checked />No
@@ -346,7 +346,7 @@
                 </select>
                 <br />
 
-                <h2>Additional Options</h2>
+                <h2 data-translation-additionaloptions >Additional Options</h2>
                 <label data-translation-enablepriority>Enable Priority</label>
                 <input type="checkbox" id="enableprio">
                 <br />
@@ -361,7 +361,7 @@
                 <input type="number" value="8000" id="creategamelp" min="1" />
                 <br />
 
-                <div class="button" id="creategameok" onclick='setHostSettings();'>Host</div>
+                <div data-translation-host class="button" id="creategameok" onclick='setHostSettings();'>Host</div>
 
             </div>
         </section>
