Dev Tools change
prepend -> append

--- a/server/http/interface/index.html
+++ b/server/http/interface/index.html
@@ -45,7 +45,7 @@
         
 		$(function(){
 			if ("production" !== mode) {
-				$('#control').prepend('<div onclick="openConsole();"></dvi>');
+				$('#control').append('<div onclick="openConsole();"></dvi>');
 			}
 		});
     </script>
