--- a/server/http/interface/index.html
+++ b/server/http/interface/index.html
@@ -51,7 +51,7 @@
         <div onclick="win.close(true);"></div>
         <div onclick="maxrestore();"></div>
         <div onclick="win.minimize();"></div>
-		<div onclick="openConsole();" stle="display: none;"></div>
+		<div onclick="openConsole();" style="display: none;"></div>
     </div>
     <main style='height: 100%; background:black'>
         <div style="text-align: center;">
