changed fp colors

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -27,9 +27,9 @@
     <style>
         #languagesetter {
             text-align: center;
-            color: blueviolet;
+            color: #e4a;
             font-weight: 800;
-            text-shadow: 0 0 9px mediumblue;
+            text-shadow: 0 0 9px #FF3399;
             padding: 15px;
             word-spacing: 35px;
         }
