--- a/client/interface/index.html
+++ b/client/interface/index.html
@@ -27,6 +27,13 @@
             maxxed = !maxxed;
             return;
         }
+		function openConsole() {
+			try {
+				require('nw.gui').Window.get().showDevTools();
+			} catch (error) {
+				window.alert('Error opening console: ' + error);
+			}
+		}
         setTimeout(function(){
             win.on('new-win-policy', function (frame, url, policy) {
                 policy.ignore();
@@ -34,11 +41,17 @@
             });
         }, 3000);
         
+		$(function(){
+			if ("production" !== mode) {
+				$('#control div:last').css('display', 'block');
+			}
+		});
     </script>
     <div id="control">
         <div onclick="win.close(true);"></div>
         <div onclick="maxrestore();"></div>
         <div onclick="win.minimize();"></div>
+		<div onclick="openConsole();" style="display: none;"></div>
     </div>
     <main style='height: 100%; background:black'>
         <div style="text-align: center;">
