--- a/server/http/index.html
+++ b/server/http/index.html
@@ -246,7 +246,7 @@
             <form id="ipblogin" style="text-align:center; color: white !important; display:block; margin:0 auto" class="launcheronly loginsystem">
                 <input data-translation-forumusername id="ips_username" type="text" class="launcheronly loginsystem" name="ips_username" tabindex="1" placeholder="Forum Username">
                 <input data-translation-forumpassword id="ips_password" type="password" class="launcheronly loginsystem" name="ips_password" tabindex="2" placeholder="Forum Password">
-                <br><span style="font-size:.7em"><input type="checkbox" id="ips_remember" ><span data-translation-rememberusernamepassword> Remember Username &amp; Password?</span></span>
+                <br><span style="font-size:.7em display:block; margin-top:-1em;"><input type="checkbox" id="ips_remember" ><span data-translation-rememberusernamepassword> Remember Username &amp; Password?</span></span>
                 <br />
                 <button data-translation-login id="dolog" class="launcheronly loginsystem">Login</button>
                 <br />
@@ -296,7 +296,7 @@
         <section id="hostSettings">
             <div>
 
-                <h2 data-translation-settings >Settings</h2>
+                <h2 data-translation-settings>Settings</h2>
                 <!--<label data-translation-ranked>Ranked</label>
                 <input type="radio" name="ranked" value="R" />Yes
                 <input type="radio" name="ranked" value="U" checked />No
@@ -346,7 +346,7 @@
                 </select>
                 <br />
 
-                <h2 data-translation-additionaloptions >Additional Options</h2>
+                <h2 data-translation-additionaloptions>Additional Options</h2>
                 <label data-translation-enablepriority>Enable Priority</label>
                 <input type="checkbox" id="enableprio">
                 <br />
