--- a/server/http/index.html
+++ b/server/http/index.html
@@ -262,7 +262,7 @@
                 <span onclick="translateLang('fr')">Français</span>
                 <span onclick="translateLang('pt')">Português</span>
                 <span onclick="translateLang('nl')">Nederlands</span>
-				<span onclick="translations('jp')">日本語</span>
+				<span onclick="translateLang('jp')">日本語</span>
             </div>
             <div class="webonly" style="width:728px;margin:0 auto">
                 <SCRIPT language="Javascript">
