Added Launcher Settings
Includes refusing duel requests

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -509,11 +509,15 @@
                         <select id="dblist">
                         </select>
                         <br />
-
                         <br />
                         <label></label>
                         <button onclick="ygopro('-c')">View YGOPro Folder</button>
-                    </div>
+						<br />
+						<br />
+						<h4 data-translation-launchersettings style="text-align:center; color:silver">Launcher Settings</h4>
+						<label data-translation-refuseduelrequests>Refuse Duel Requests</label>
+						<input type="checkbox" data-localhost="refuse_duel_requests">
+					</div>
                 </div>
             </section>
         </div>
