--- a/server/http/index.html
+++ b/server/http/index.html
@@ -511,7 +511,7 @@
                         <br />
                         <br />
                         <label></label>
-                        <button onclick="ygopro('-c')">View YGOPro Folder</button>
+                        <button data-translation-viewygoprofolder onclick="ygopro('-c')">View YGOPro Folder</button>
 						<br />
 						<br />
 						<h4 data-translation-launchersettings style="text-align:center; color:silver">Launcher Settings</h4>
