--- a/server/http/index.html
+++ b/server/http/index.html
@@ -511,10 +511,10 @@
                         <br />
                         <br />
                         <label></label>
-                        <button data-translation-viewygoprofolder onclick="ygopro('-c')">View YGOPro Folder</button>
+                        <button data-translation-viewygoprofolder onclick="ygopro('-c')" style="float:left">View YGOPro Folder</button>
 						<br />
 						<br />
-						<h4 data-translation-launchersettings style="text-align:center; color:silver">Launcher Settings</h4>
+						<h3 data-translation-launchersettings style="text-align:left; border-top 1px solid silver; padding-top: 10px; color:silver">Launcher Settings</h4>
 						<label data-translation-refuseduelrequests>Refuse Duel Requests</label>
 						<input type="checkbox" data-localhost="refuse_duel_requests">
 					</div>
