--- a/server/http/index.html
+++ b/server/http/index.html
@@ -514,7 +514,7 @@
                         <button data-translation-viewygoprofolder onclick="ygopro('-c')" style="float:left">View YGOPro Folder</button>
 						<br />
 						<br />
-						<h3 data-translation-launchersettings style="text-align:left; border-top 1px solid silver; padding-top: 10px; color:silver">Launcher Settings</h4>
+						<h3 data-translation-launchersettings style="text-align: left; border-top: 1px solid silver; padding-top: 10px; color: silver">Launcher Settings</h3>
 						<label data-translation-refuseduelrequests>Refuse Duel Requests</label>
 						<input type="checkbox" data-localhost="refuse_duel_requests">
 					</div>
