turkish added to options

--- a/server/http/index.html
+++ b/server/http/index.html
@@ -263,6 +263,7 @@
                 <span onclick="translateLang('pt')">Português</span>
                 <span onclick="translateLang('nl')">Nederlands</span>
 				<span onclick="translateLang('jp')">日本語</span>
+				<span onclick="translateLang('tr')">Türkçe</span>
             </div>
             <div class="webonly" style="width:728px;margin:0 auto">
                 <SCRIPT language="Javascript">
